tests/unsafe_getters_setters/unsafe_getters_setters.exp
Error ------------------------------------------------------------------------------------ unsafe_getters_setters.js:6:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   6|   get a() { return 4; },
        ^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------ unsafe_getters_setters.js:7:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   7|   set b(x: number) { this.c = x; },
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:12:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   12|   get a() { return 4; }
         ^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:13:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   13|   set b(x: number) { this.c = x; }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:18:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   18|   get a(): number,
         ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:19:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   19|   set b(x: number): void,
         ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:24:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   24|   get a(): number;
         ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:25:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   25|   set b(x: number): void;
         ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:31:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   31|   get b(): number;
         ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:32:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   32|   set c(x: number): void;
         ^^^^^^^^^^^^^^^^^^^^^^



Found 10 errors
